fix(YSP-288): fix mobile menu when resizing. Remove animation on menu because there is too much space from the top of the screen to the menu

--- a/components/03-organisms/menu/secondary-nav/_yds-secondary-nav.scss
+++ b/components/03-organisms/menu/secondary-nav/_yds-secondary-nav.scss
@@ -164,29 +164,17 @@ $secondary-menu-sub-max-width: 19rem;
 
   .in-this-section__inner & {
     @media (max-width: tokens.$break-mobile-max) {
-      @include tokens.animate(
-        transform,
-        var(--site-in-this-section-animation-speed)
-      );
-
-      transform: translateY(-100%);
-      overflow: auto;
-
-      [data-secondary-menu-state='closed'] & {
-        @include tokens.animate-hidden(
-          var(--site-in-this-section-animation-speed)
-        );
-
-        transform: translateY(-100%);
-        background-color: var(--color-background);
-      }
 
       [data-secondary-menu-state='open'] & {
         border-bottom: var(--border-thickness-4) solid
           var(--color-navigation-border);
         padding-bottom: var(--size-spacing-4);
         background-color: var(--color-gray-100);
-        transform: translateY(0%);
+        display: flex;
+      }
+
+      [data-secondary-menu-state='closed'] & {
+        display: none;
       }
 
       // when used in in-this-section, add a top border
@@ -610,12 +598,6 @@ $secondary-menu-sub-max-width: 19rem;
 }
 
 .secondary-nav__toggle-icon {
-  @include tokens.animate;
-
   height: 1em;
   width: 1em;
-
-  .secondary-nav__toggle[aria-expanded='true'] > & {
-    transform: rotate(180deg);
-  }
 }
